--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,9 @@ body {
     font-size: 20px;
     letter-spacing: 0.1em;
     color: $info-text-color;
+    * {
+        box-sizing: border-box;
+    }
 }
 .body-mask {
     height: 100%;
@@ -21,7 +24,7 @@ body {
 }
 @media (max-width: 768px) {
     body {
-        font-size: 3vw;
+        font-size: 4vw;
     }
 }
 button {
@@ -244,5 +247,42 @@ svg {
     transition: all 0.3s;
     &:hover {
         background-color: $button-hover-color;
+    }
+}
+@media (max-width: 768px) {
+    .container {
+        background-position: 50% 3em;
+        background-size: 120%;
+    }
+    .hero {
+        width: 80%;
+    }
+    .components-wrap {
+        margin-top: -5.5%;
+    }
+    .tabs-wrap {
+        width: 100%;
+        gap: 0.5em;
+        padding: 0.5em 0.5em 0;
+        border-radius: 1em 1em 0 0;
+        .tab-btn {
+            border-radius: 1em;
+        }
+    }
+    .preview-wrap {
+        .toolbar {
+            width: 100%;
+            gap: 0.5em;
+            padding: 0.5em 0.5em 0;
+            border-radius: 1em 1em 0 0;
+            margin: 3em auto 0;
+            .tab-btn {
+                border-radius: 1em;
+            }
+        }
+    }
+    .help-btn {
+        width: 3em;
+        height: 3em;
     }
 }
