--- a/css/components.css
+++ b/css/components.css
@@ -987,13 +987,14 @@ button {
 }
 
 .content-a-style .slogan .title {
-  width: 100%;
+  width: 99%;
   color: #000;
   margin: 0.1em 0;
   padding-left: 1em;
   font-size: clamp(2em, 3vw, 3em);
   text-align: center;
-  word-break: keep-all;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .content-a-style .slogan .sub-title {
