--- a/css/components.scss
+++ b/css/components.scss
@@ -760,7 +760,7 @@ $content-a-margin-size: 5em;
       color: $content-a-text-color;
       margin: 0.1em 0;
       //有全形標點符號時需要校正再開啟padding-left
-      padding-left: 1em;
+      // padding-left: 1em;
       font-size: clamp(2em, 3vw, 3em);
       text-align: center;
       word-wrap: break-word;
