--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,7 @@ svg {
     position: absolute;
     width: 90%;
     left: 50%;
-    top: 5%;
+    top: 3em;
     transform: translateX(-50%);
 }
 .hero {
@@ -264,6 +264,7 @@ svg {
     }
     .hero-title {
         width: 95%;
+        top: 2em;
     }
     .hero {
         width: 80%;
